app/src/main/java/com/example/android_internship/ui/error/InputError.kt
package com.example.android_internship.ui.error

import com.example.android_internship.error.ErrorMessage

open class InputError: ErrorMessage {
    override val error: Throwable?
        get() = null
}